Fixed some formatting issues where the map overlapped the footer element

--- a/public/planner.css
+++ b/public/planner.css
@@ -1,9 +1,3 @@
-body,
-html {
-    height: 100%;
-    margin: 0;
-}
-
 div.hr {
     border-top: 1px solid #ddd;
     margin-left: 85px;
