--- a/public/style.css
+++ b/public/style.css
@@ -10,15 +10,8 @@ body {
     flex-direction: column;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    background-color: #4a2f2f;
-    color: red;
-    padding: 10px 0;
+footer {
+    margin-top: 20px;
 }
 
 .bg-image {
@@ -39,21 +32,21 @@ body {
     padding-top: 30px;
 }
 
-.row-container {
-    display: flex;
-    width: 100%;
-    height: 80%;
-    flex-direction: column;
-    /* overflow: hidden; */
-}
+
 
 iframe {
     flex-grow: 1;
     border: none;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: auto;
+    min-height: 300px;
 }
 
 main {
-    height: 100%;
+    flex-grow: 1;
+    /* Allow main content to grow and fill available space */
+    overflow: auto;
+    /* Add scroll to main content if needed */
 }
